--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -17,6 +17,11 @@
       "types": "./dist/core.d.ts",
       "default": "./dist/core.js"
     },
+    "./db": {
+      "dev-source": "./db.ts",
+      "types": "./dist/db.d.ts",
+      "default": "./dist/db.js"
+    },
     "./orm": {
       "dev-source": "./orm.ts",
       "types": "./dist/orm.d.ts",
@@ -51,6 +56,31 @@
       "dev-source": "./plugins/github/index.ts",
       "types": "./dist/plugins/github/index.d.ts",
       "default": "./dist/plugins/github/index.js"
+    },
+    "./plugins/gmail": {
+      "dev-source": "./plugins/gmail/index.ts",
+      "types": "./dist/plugins/gmail/index.d.ts",
+      "default": "./dist/plugins/gmail/index.js"
+    },
+    "./plugins/googlecalendar": {
+      "dev-source": "./plugins/googlecalendar/index.ts",
+      "types": "./dist/plugins/googlecalendar/index.d.ts",
+      "default": "./dist/plugins/googlecalendar/index.js"
+    },
+    "./plugins/googledrive": {
+      "dev-source": "./plugins/googledrive/index.ts",
+      "types": "./dist/plugins/googledrive/index.d.ts",
+      "default": "./dist/plugins/googledrive/index.js"
+    },
+    "./plugins/googlesheets": {
+      "dev-source": "./plugins/googlesheets/index.ts",
+      "types": "./dist/plugins/googlesheets/index.d.ts",
+      "default": "./dist/plugins/googlesheets/index.js"
+    },
+    "./plugins/hubspot": {
+      "dev-source": "./plugins/hubspot/index.ts",
+      "types": "./dist/plugins/hubspot/index.d.ts",
+      "default": "./dist/plugins/hubspot/index.js"
     }
   },
   "scripts": {
