--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "release": "turbo --filter \"./packages/*\" build && bumpp && pnpm -r publish --access public --no-git-checks",
     "release:no-build": "bumpp && pnpm -r publish --access public --no-git-checks --tag next",
     "release:canary": "turbo --filter \"./packages/*\" build && bumpp && pnpm -r publish --access public --tag canary --no-git-checks",
-    "bump": "bumpp",
+    "bumpp": "bumpp",
     "typecheck": "tsc --build"
   },
   "devDependencies": {
