feat: telegram plugin

--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -81,6 +81,11 @@
       "dev-source": "./plugins/hubspot/index.ts",
       "types": "./dist/plugins/hubspot/index.d.ts",
       "default": "./dist/plugins/hubspot/index.js"
+    },
+    "./plugins/telegram": {
+      "dev-source": "./plugins/telegram/index.ts",
+      "types": "./dist/plugins/telegram/index.d.ts",
+      "default": "./dist/plugins/telegram/index.js"
     }
   },
   "scripts": {
